--- a/src/app/admin/pages/pages.component.html
+++ b/src/app/admin/pages/pages.component.html
@@ -37,37 +37,37 @@
         (nzContextMenu)="actions($event, treeActions)"
         (nzOnDrop)="drop($event)"
       >
-        <ng-template #nzExpandedIcon let-node let-origin="origin">
-          <ng-container [ngSwitch]="origin.data.kind">
-            <ng-container *ngSwitchCase="'form'">
-              <i nz-icon nzType="form"></i>
-            </ng-container>
-            <ng-container *ngSwitchCase="'dashboard'">
-              <i nz-icon nzType="dashboard"></i>
-            </ng-container>
-            <ng-container *ngSwitchCase="'group'">
-              <i nz-icon [nzType]="node.isExpanded ? 'ungroup' : 'group'"></i>
-            </ng-container>
-            <ng-container *ngSwitchDefault>
-              <i nz-icon nzType="database"></i>
+        <ng-template #nzExpandedIcon let-node>
+          <ng-container *ngIf="data.hasOwnProperty(node.key)">
+            <ng-container [ngSwitch]="data[node.key].kind">
+              <ng-container *ngSwitchCase="'form'">
+                <i nz-icon nzType="form"></i>
+              </ng-container>
+              <ng-container *ngSwitchCase="'dashboard'">
+                <i nz-icon nzType="dashboard"></i>
+              </ng-container>
+              <ng-container *ngSwitchCase="'group'">
+                <i nz-icon [nzType]="node.isExpanded ? 'ungroup' : 'group'"></i>
+              </ng-container>
+              <ng-container *ngSwitchDefault>
+                <i nz-icon nzType="database"></i>
+              </ng-container>
             </ng-container>
           </ng-container>
         </ng-template>
         <nz-dropdown-menu #treeActions="nzDropdownMenu">
-          <ul nz-menu>
-            <li nz-menu-item [nzSelected]="false">{{ actionNode?.title }}</li>
+          <ul *ngIf="actionData as x" nz-menu>
+            <li nz-menu-item [nzSelected]="false">{{ x.name }}</li>
             <li nz-menu-divider></li>
-            <ng-container *ngIf="actionNode?.origin.data as x">
-              <li nz-menu-item (click)="form(x)"> 编辑 </li>
-              <li nz-menu-item nzDanger (click)="delete(x)"> 删除 </li>
-            </ng-container>
+            <li nz-menu-item (click)="form(x)"> 编辑 </li>
+            <li nz-menu-item nzDanger (click)="delete(x)"> 删除 </li>
           </ul>
         </nz-dropdown-menu>
       </nz-tree>
     </nz-card>
   </nz-col>
   <nz-col [nzXl]="19" [nzLg]="18">
-    <nz-card *ngIf="!selectedNode; else schemaContent">
+    <nz-card *ngIf="!selectedData; else schemaContent">
       <nz-result [nzIcon]="nzIcon">
         <ng-template #nzIcon><i nz-icon nzType="question-circle"></i></ng-template>
         <div nz-result-title> 使用提示 </div>
@@ -96,9 +96,9 @@
           </nz-tabset>
         </nz-card-tab>
         <app-admin-pages-schema
-          [page]="selectedNode?.origin?.data"
+          [page]="selectedData"
           [fieldList]="fieldList"
-          (changed)="schemaChanged()"
+          (changed)="getData()"
         ></app-admin-pages-schema>
       </nz-card>
     </ng-template>
