--- a/src/app/admin/pages/tab-validator/validator.component.html
+++ b/src/app/admin/pages/tab-validator/validator.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" #formRef nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form *ngIf="form" nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-control
       [nzAutoTips]="{
@@ -17,7 +17,7 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control>
-      <button #submitBtn nz-button nzType="primary" [disabled]="!form?.valid">更新</button>
+      <button nz-button nzType="primary" [disabled]="!form?.valid">更新</button>
     </nz-form-control>
   </nz-form-item>
 </form>
