--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,20 @@
 @import 'node_modules/ng-zorro-antd/code-editor/style';
 @import 'node_modules/ng-zorro-antd/resizable/style';
 
+.main {
+  height: 100%;
+}
+
+.content {
+  padding-top: 64px;
+}
+
+nz-sider {
+  overflow: auto;
+  height: 100%;
+  border-right: 1px solid #f0f0f0;
+}
+
+nz-content {
+  padding: 12px;
+}
