--- a/src/settings/pages/tabs/tabs.component.html
+++ b/src/settings/pages/tabs/tabs.component.html
@@ -2,16 +2,16 @@
   <nz-card-tab>
     <nz-tabset nzSize="large" nzLinkRouter [nzAnimated]="false" [nzTabBarExtraContent]="extra">
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'settings', 'pages', key, 'schema']"> 数据源 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'pages', key, 'schema']"> 数据源 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'settings', 'pages', key, 'indexes']"> 索引规则 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'pages', key, 'indexes']"> 索引规则 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'settings', 'pages', key, 'rules']"> 显隐规则 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'pages', key, 'rules']"> 显隐规则 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'settings', 'pages', key, 'validator']"> 验证器 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/settings', 'pages', key, 'validator']"> 验证器 </a>
       </nz-tab>
     </nz-tabset>
   </nz-card-tab>
