--- a/src/settings/pages/tab-schema/schema.component.html
+++ b/src/settings/pages/tab-schema/schema.component.html
@@ -18,7 +18,7 @@
     <thead>
       <tr>
         <th nzWidth="65px" nzLeft nzAlign="center"> </th>
-        <th nzWidth="420px">字段</th>
+        <th nzWidth="420px" nzLeft>字段</th>
         <th>描述</th>
         <th nzWidth="100px" nzRight nzAlign="center">操作</th>
       </tr>
@@ -30,7 +30,7 @@
             <i nz-icon nzType="drag"></i>
           </button>
         </td>
-        <td>
+        <td nzLeft>
           <nz-tag nzColor="blue">{{ datatype[data.type] }}</nz-tag>
           {{ data.label }} [ {{ data.key }} ]
         </td>
